# ep133-krate

./: .gitignore  AGENTS.md  ANALYSIS_SUMMARY.md  BACKLOG.md  BACKUP_PROTOCOL.md  CONFIG-RESEARCH.md  CONTRIBUTING.md  DISCOVERY.md  FINDINGS.md  IDEAS.md  LICENSE  MANAGEMENT.md  METADATA_CORRUPTION.md  Makefile  PPAK_FORMAT.md  PROJECT_OPERATIONS.md  PROTOCOL.md  PROTOCOL_AUDIT.md  PROTOCOL_TEST_RESULTS.md  PROTOCOL_VALIDATION.md  README.md  REALITY.md  REPO_ANALYSIS.md  SESSION_SUMMARY.md  STATUS.md  TODO.md  TO_VERIFY.md  UPLOAD_INVESTIGATION.md  UPLOAD_PROTOCOL_DETAILS.md  decode_info.py  download_with_init.py  fix_tests2.py  fix_tests3.py  fix_tests4.py  fix_tests6.py  fix_tests7.py  fix_tests8.py  fix_tests9.py  install.sh  ko2-list.py  (+33 more)
.beads/: config.yaml  metadata.json
.beads/backup/: backup_state.json  (+6 more)
.claude/: CLAUDE.md
.claude-sessions/: 2025-02-19-upload-debug.md
.github/: CODEOWNERS  pull_request_template.md
captures/: 2026-02-20-audit-001-099.jsonl  2026-02-20-audit-100-199.jsonl  evidence-download-state-bug.jsonl  sniffer-padmap-A.jsonl  sniffer-padtrim.jsonl  sniffer-readmeta.jsonl  sniffer-rename.jsonl  sniffer-rename54-txrx.jsonl  sniffer-slot26.jsonl  sniffer-upload-kick-official.jsonl
docs/: CAPTURE_FORMAT.md  CAPTURE_WISHLIST.md  EMULATOR.md  PROTOCOL_EVIDENCE.md  REFERENCES.md  ep133-filesystem.md  protocol-evidence.md  refactoring-plan.md
ko2_tui/: actions.py  app.py  debug_log.py  dialog_log.py  state.py  ui.py  waveform_store.py  waveform_widget.py  worker.py
scripts/: capture_upload.py  midi_proxy.py  mobile_bridge.py  strip_captures.py
src/: __init__.py
tests/: README.md  __init__.py  conftest.py  emulator.py  helpers.py  test_get.py  test_group.py  test_info.py  test_put.py
(+99 files in other folders)
