[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ep133-krate"
version = "0.1.0"
description = "Sample manager for the Teenage Engineering EP-133 KO-II"
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3.0",
    "python-rtmidi>=1.5.0",
    "textual>=0.80.0",
    "rich>=13.0.0",
]

[project.scripts]
krate = "cli.cli_main:main"

[tool.setuptools.packages.find]
where = ["src"]
